# vs-rs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: main.yml
assets/: obj_bench.json  rooms.tiled-session  tilesheet.json  tilesheet.tsx
assets/rooms/map_01/: room_01.tmx  room_02.tmx  room_03.tmx
collisions/: Cargo.toml
collisions/src/: colliders.rs  lib.rs  plugin.rs  prelude.rs  shapes.rs  spatial_hash.rs  store.rs
common/: Cargo.toml
common/src/: bitmasking.rs  delaunay2d.rs  lib.rs  math.rs  prim.rs
configs/: enemies.json
movement/: Cargo.toml
movement/src/: behaviors.rs  lib.rs  paths.rs  plugin.rs  prelude.rs
physics/: Cargo.toml
physics/src/: collisions.rs  lib.rs  movement.rs  plugin.rs  prelude.rs
physics/src/collisions/: colliders.rs  shapes.rs  spatial_hash.rs  tests.rs
physics/src/movement/: behaviors.rs  paths.rs  steering.rs
src/: assets.rs  camera.rs  collisions.rs  debug.rs  enemy.rs  input.rs  main.rs  math.rs  movement.rs  player.rs  stats.rs  steering.rs  tilemap.rs  worlds.rs
src/assets/: rooms.rs  tilesheets.rs
src/collisions/: colliders.rs  plugin.rs  shapes.rs  spatial_hash.rs  store.rs
src/movement/: behaviors.rs  paths.rs  steering.rs
src/worlds/: bitmasking.rs  world.rs  worldgen.rs
src/worlds/worldgen/: delaunay2d.rs  prim.rs  room.rs  settings.rs  stages.rs
vs-assets/: Cargo.toml
vs-assets/src/: enemies.rs  lib.rs  plugin.rs  prelude.rs  rooms.rs  tilesheets.rs
vs-rs/: Cargo.toml
vs-rs/assets/: gy.tmx  map_example.tmx  obj_bench.tmx  tilesheet.json
vs-rs/assets/configs/: enemies.json
vs-rs/assets/rooms/map_01/: room_03.tmx  room_04.tmx
vs-rs/src/: debug.rs  enemy.rs  experience.rs  input.rs  main.rs  math.rs  movement.rs  player.rs  prelude.rs  stats.rs  ui.rs  worlds.rs
vs-rs/src/assets/: prefabs.rs  rooms.rs
vs-rs/src/collisions/: colliders.rs
vs-rs/src/movement/: behaviors.rs  paths.rs  steering.rs
vs-rs/src/ui/: game_timer.rs  health_bar.rs
vs-rs/src/worlds/: bitmasking.rs  world.rs  worldgen.rs
vs-rs/src/worlds/worldgen/: delaunay2d.rs  prim.rs  room.rs
worldgen/: Cargo.toml
worldgen/src/: generation.rs  lib.rs  world.rs
worldgen/src/generation/: room.rs  stages.rs
