[package]
name = "vs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }
rand = "0.4.6"
serde_json = "1.0.111"
serde = "1.0.195"

num_enum = "0.7.2"

[target."cfg(debug_assertions)".dependencies]
bevy-inspector-egui = { version = "0.22.1" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
