[package]
name = "vs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2" }
rand = "0.8.5"
serde_json = "1.0"
serde = "1.0"
num_enum = "0.7"
bevy_framepace = "0.15"
bevy-inspector-egui = { version = "0.24" }
bevy_simple_tilemap = "0.14"
tiled = "0.11.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
